# devmagang

./: pyproject.toml
myproject/assetsemua/: apps.py
myproject/assetsemua/static/: style.css
myproject/assetsemua/templates/: index2.html
myproject/bankaccount/: models.py  views.py
myproject/bankaccount/templates/: bankaccounttabel.html  update.html
myproject/chartofaccount/: views.py
myproject/coa_header/: apps.py  views.py
myproject/coacategory/: apps.py  views.py
myproject/coagroup/: apps.py  views.py
myproject/company/: views.py
myproject/interestrate/: views.py
myproject/login/: views.py
myproject/login/templates/: login.html  resetpassword.html
myproject/myproject/: settings.py  urls.py
myproject/taildiwndcss/: apps.py  views.py
myproject/users/: views.py
