[tool.pdm]
distribution = true
[tool.pdm.scripts]
_.env_file = ".venv"
[project]
name = "pdm-django"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "anti009x", email = "riskisuleman76@gmail.com"},
]
dependencies = [
    "django-environ>=0.11.2",
    "postgres>=4.0",
    "psycopg2>=2.9.9",
    "django>=5.0.6",
    "django-tailwind>=3.8.0",
    "tailwindcss>=0.0.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
